-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0
-
ZFS
-
3
-
9223372036854775807
sanity test_271f started failing on November 27, 2018 with the error '1 READ RPC occured'. So far, this failure is only seen with non-DNE and ZFS configurations.
Looking at the logs for a recent failure at https://testing.whamcloud.com/test_sets/faa5559a-f9ef-11e8-8512-52540065bddc , the client test_log contains
== sanity test 271f: DoM: read on open (200K file and read tail) ===================================== 23:15:29 (1544051729) CMD: onyx-46vm9 /usr/sbin/lctl get_param -n version 2>/dev/null || /usr/sbin/lctl lustre_build_version 2>/dev/null || /usr/sbin/lctl --version 2>/dev/null | cut -d' ' -f2 warning: '-M' deprecated, use '--mdt-index' or '-m' instead 1+0 records in 1+0 records out 200000 bytes (200 kB) copied, 0.00141796 s, 141 MB/s 1+0 records in 1+0 records out 200000 bytes (200 kB) copied, 0.00106307 s, 188 MB/s Append to the same page sanity test_271f: @@@@@@ FAIL: 1 READ RPC occured
There is no indication of any problems in the console logs.
This failure looks different from LU-11532 in that this failure does not look like a bash/test error. In early November, there was a modification made to this test by path https://review.whamcloud.com/33490 , but the start of these failures is delayed from the landing of this patch.
Other similar failures are at
https://testing.whamcloud.com/test_sets/23e23310-f2a2-11e8-b67f-52540065bddc
https://testing.whamcloud.com/test_sets/512dc616-f2ea-11e8-b67f-52540065bddc
https://testing.whamcloud.com/test_sets/db8b58f8-f530-11e8-86c0-52540065bddc
https://testing.whamcloud.com/test_sets/d8091eb8-f72e-11e8-b67f-52540065bddc